--- a/index.html
+++ b/index.html
@@ -607,33 +607,33 @@
       { id:'t3', slot:'top', name:'Kemeja Oxford', img:'keem.jpg' },
       { id:'t4', slot:'top', name:'Blouse Sutra', img:'blouse.jpg' },
       { id:'t5', slot:'top', name:'Sweater / Knit', img:'swea.jpg' },
-      { id:'t6', slot:'top', name:'Denim Shirt', img:'https://via.placeholder.com/300/bfdbfe/1d4ed8?text=Denim+Shirt' },
-      { id:'t7', slot:'top', name:'Turtle Neck', img:'https://via.placeholder.com/300/1e293b/ffffff?text=Turtle+Neck' },
+      { id:'t6', slot:'top', name:'Denim Shirt', img:'denimshrt.jpeg' },
+      { id:'t7', slot:'top', name:'Turtle Neck', img:'turneck.jpeg' },
 
       // Item Baru - Bottoms
-      { id:'b3', slot:'bottom', name:'Tailored Trousers', img:'https://via.placeholder.com/300/334155/ffffff?text=Tailored+Pants' },
-      { id:'b4', slot:'bottom', name:'Pleated Skirt', img:'https://via.placeholder.com/300/f1f5f9/475569?text=Pleated+Skirt' },
-      { id:'b5', slot:'bottom', name:'Chinos / Khaki', img:'https://via.placeholder.com/300/fef3c7/b45309?text=Chinos' },
-      { id:'b6', slot:'bottom', name:'Leather Skirt', img:'https://via.placeholder.com/300/000000/ffffff?text=Leather+Skirt' },
-      { id:'b7', slot:'bottom', name:'Jogger Pants', img:'https://via.placeholder.com/300/d1d5db/374151?text=Joggers' },
+      { id:'b3', slot:'bottom', name:'Tailored Trousers', img:'tailtrous.jpeg' },
+      { id:'b4', slot:'bottom', name:'Pleated Skirt', img:'pltdskrt.jpeg' },
+      { id:'b5', slot:'bottom', name:'Chinos / Khaki', img:'chinos.jpeg' },
+      { id:'b6', slot:'bottom', name:'Leather Skirt', img:'leathrskrt.jpeg' },
+      { id:'b7', slot:'bottom', name:'Jogger Pants', img:'joggrspnts.jpeg' },
 
       // Item Baru - Shoes
-      { id:'s2', slot:'shoes', name:'Clean White Sneakers', img:'https://via.placeholder.com/300/ffffff/000000?text=White+Sneakers' },
-      { id:'s3', slot:'shoes', name:'Loafers', img:'https://via.placeholder.com/300/573020/ffffff?text=Loafers' },
-      { id:'s4', slot:'shoes', name:'Ankle Boots', img:'https://via.placeholder.com/300/1f2937/ffffff?text=Ankle+Boots' },
-      { id:'s5', slot:'shoes', name:'Heeled Pumps', img:'https://via.placeholder.com/300/be185d/ffffff?text=Heeled+Pumps' },
+      { id:'s2', slot:'shoes', name:'Clean White Sneakers', img:'whitsneakr.jpeg' },
+      { id:'s3', slot:'shoes', name:'Loafers', img:'loafr.jpeg' },
+      { id:'s4', slot:'shoes', name:'Ankle Boots', img:'ankel.jpeg' },
+      { id:'s5', slot:'shoes', name:'Heeled Pumps', img:'heelpum.jpeg' },
 
       // Item Baru - Accessories
-      { id:'a2', slot:'acc', name:'Tote Bag', img:'https://via.placeholder.com/300/f5f5f4/78716c?text=Tote+Bag' },
-      { id:'a3', slot:'acc', name:'Belt', img:'https://via.placeholder.com/300/292524/ffffff?text=Belt' },
-      { id:'a4', slot:'acc', name:'Scarf', img:'https://via.placeholder.com/300/fbcfe8/be185d?text=Scarf' },
-      { id:'a5', slot:'acc', name:'Necklace', img:'https://via.placeholder.com/300/ffedd5/9a3412?text=Necklace' },
-      { id:'a6', slot:'acc', name:'Wristwatch', img:'https://via.placeholder.com/300/e5e7eb/374151?text=Watch' },
-      { id:'a7', slot:'acc', name:'Bracelet', img:'https://via.placeholder.com/300/ede9fe/6d28d9?text=Bracelet' },
-      { id:'a8', slot:'acc', name:'Sunglasses', img:'https://via.placeholder.com/300/171717/ffffff?text=Sunglasses' },
-      { id:'a9', slot:'acc', name:'Ring', img:'https://via.placeholder.com/300/fef9c3/ca8a04?text=Ring' },
-      { id:'a10', slot:'acc', name:'Earring', img:'https://via.placeholder.com/300/fae8ff/86198f?text=Earring' },
-      { id:'a11', slot:'acc', name:'Headband', img:'https://via.placeholder.com/300/ffe4e6/be123c?text=Headband' }
+      { id:'a2', slot:'acc', name:'Tote Bag', img:'tote.jpeg' },
+      { id:'a3', slot:'acc', name:'Belt', img:'belt.jpeg' },
+      { id:'a4', slot:'acc', name:'Scarf', img:'scarf.jpeg' },
+      { id:'a5', slot:'acc', name:'Necklace', img:'neckl.jpeg' },
+      { id:'a6', slot:'acc', name:'Wristwatch', img:'wrist.jpeg' },
+      { id:'a7', slot:'acc', name:'Bracelet', img:'brace.jpeg' },
+      { id:'a8', slot:'acc', name:'Sunglasses', img:'sungls.jpeg' },
+      { id:'a9', slot:'acc', name:'Ring', img:'ring.jpeg' },
+      { id:'a10', slot:'acc', name:'Earring', img:'ear.jpeg' },
+      { id:'a11', slot:'acc', name:'Headband', img:'head.jpeg' }
     ];
     
     function renderMixItems(){
